# kronoterm-mqtt

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
definitions/: kronoterm.toml
kronoterm_mqtt/: __init__.py  constants.py  modbus.py  mqtt_handler.py  settings.py
